Compressing all of the JS files + making nav collapse at correct width.

--- a/website/static/less/site.less
+++ b/website/static/less/site.less
@@ -114,11 +114,17 @@ footer {
 	.nav {
 		> li > a {
 			border: none;
-			padding: 18px 15px 15px;
+			padding: 18px 12px 15px;
+			cursor: pointer;
+            font-size: 13px;
 			&:hover, &:focus {
 				color: @peter-river;
 				border: none;
 			}
+            @media (min-width: 1200px) {
+                padding: 18px 15px 15px;
+                font-size: 16px;
+            }
 			@media (max-width: 979px) {
 				color: @white !important;
 				&:hover, &:focus {
@@ -162,23 +168,26 @@ footer {
 			left: 25px;
 		}
 	}
-	@media (max-width: 767px) {
-		margin-left: -20px;
-		margin-right: -20px;
-	}
-	.btn-navbar {
-		&:hover, &:focus {
-			color: @peter-river;
-		}
-	}
+    .btn-navbar {
+        &:hover, &:focus {
+            color: @peter-river;
+        }
+    }
     #search-form {
         i {
             padding-top: 2px;
         }
         input {
-            padding-left: 30px;
+            width: 150px;
+        }
+        @media (min-width: 1200px) {
+            width: auto;
         }
     }
+	@media (max-width: 767px) {
+		margin-left: -20px;
+		margin-right: -20px;
+	}
 }
 
 #content {
